<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportingFilter">

    <!-- Fit screen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Report Filters -->

        <!-- Choose the building to report -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reporting_building" />
        <!-- Dropdown for choices; from Android docs -->
        <Spinner
            android:id="@+id/reporting_dropdown"
            android:prompt="@string/reporting_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/reporting_building_options"
            android:gravity="center">
        </Spinner>

        <!-- Choose the floor to report -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reporting_floor"
            android:layout_marginTop="16dp"/>

        <!-- Choices for floors; from geeksforgeeks -->
        <RadioGroup
            android:id="@+id/idRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <RadioButton
                android:id="@+id/floor_basement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor_basement" />

            <RadioButton
                android:id="@+id/floor_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor_first" />

            <RadioButton
                android:id="@+id/floor_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor_second" />

            <RadioButton
                android:id="@+id/floor_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor_third" />

            <RadioButton
                android:id="@+id/floor_fourth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor_fourth" />

            <RadioButton
                android:id="@+id/floor_fifth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor_fifth" />

            <RadioButton
                android:id="@+id/floor_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor_other" />
        </RadioGroup>

        <!-- Enter your report comments; 10/22 Lecture -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_comment_prompt"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/user_enter_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>